@@ -96,8 +96,8 @@ void autoGenRealisticLandscape(int seed)
     water.depth_color.b = 0.3;
     water.depth_color.a = 1.0;
     water.lighting_depth = 3.0;
-    water.waves_noise_height = 0.015;
-    water.waves_noise_scale = 0.2;
+    water.waves_noise_height = 0.005;
+    water.waves_noise_scale = 0.07;
     noiseGenerateBaseNoise(water.waves_noise, 262144);
     noiseAddLevelsSimple(water.waves_noise, 2, 1.0, 1.0);
     noiseAddLevelsSimple(water.waves_noise, 3, 0.15, 0.1);
@@ -139,7 +139,7 @@ void autoGenRealisticLandscape(int seed)
     /* Terrain */
     terrain = terrainCreateDefinition();
     noiseGenerateBaseNoise(terrain.height_noise, 1048576);
-    noiseAddLevelsSimple(terrain.height_noise, 10, 1.0, 1.0);
+    noiseAddLevelsSimple(terrain.height_noise, 12, 1.0, 1.0);
     terrain.height_factor = 12.0 / noiseGetMaxValue(terrain.height_noise);
     terrain.scaling = 10.0;
     scenerySetTerrain(&terrain);
@@ -152,35 +152,44 @@ void autoGenRealisticLandscape(int seed)
     zoneAddSlopeRangeQuick(texture->zone, 1.0, 0.0, 0.0, 5.0, 5.0);
     noiseGenerateBaseNoise(texture->bump_noise, 102400);
     noiseAddLevelsSimple(texture->bump_noise, 8, 1.0, 1.0);
-    texture->bump_height = 0.1;
-    texture->bump_scaling = 0.15;
+    texture->bump_height = 0.01;
+    texture->bump_scaling = 0.015;
     texture->material.base.r = 0.6;
     texture->material.base.g = 0.55;
     texture->material.base.b = 0.57;
     texture->material.reflection = 0.2;
     texture->material.shininess = 3.0;
+    texture->thickness = 0.001;
+    texture->slope_range = 0.001;
     texture = texturesGetLayer(&textures, texturesAddLayer(&textures));
     zoneAddHeightRangeQuick(texture->zone, 1.0, -1.0, 0.0, 3.0, 15.0);
-    zoneAddSlopeRangeQuick(texture->zone, 1.0, 0.0, 0.0, 0.2, 0.3);
+    zoneAddSlopeRangeQuick(texture->zone, 1.0, 0.0, 0.0, 0.1, 0.7);
     noiseGenerateBaseNoise(texture->bump_noise, 102400);
     noiseAddLevelsSimple(texture->bump_noise, 5, 1.0, 0.4);
     noiseAddLevelsSimple(texture->bump_noise, 2, 0.03, 0.08);
-    texture->bump_height = 0.02;
-    texture->bump_scaling = 0.1;
+    texture->bump_height = 0.002;
+    texture->bump_scaling = 0.01;
     texture->material.base.r = 0.12;
     texture->material.base.g = 0.19;
     texture->material.base.b = 0.035;
     texture->material.reflection = 0.1;
     texture->material.shininess = 2.0;
-    /*texture = texturesGetLayer(&textures, texturesAddLayer(&textures));
-    zoneAddHeightRange(texture->zone, 1.0, 3.0, 4.0, 100.0, 100.0);
+    texture->thickness = 0.02;
+    texture->slope_range = 0.03;
+    texture = texturesGetLayer(&textures, texturesAddLayer(&textures));
+    zoneAddHeightRangeQuick(texture->zone, 1.0, 4.0, 5.0, 100.0, 100.0);
+    zoneAddSlopeRangeQuick(texture->zone, 1.0, 0.0, 0.0, 0.2, 1.0);
     noiseGenerateBaseNoise(texture->bump_noise, 102400);
-    noiseAddLevelsSimple(texture->bump_noise, 6, 0.04, 0.003);
-    texture->color.r = 1.0;
-    texture->color.g = 1.0;
-    texture->color.b = 1.0;
-    texturesSetDefinition(layer, texture);
-    texturesDeleteDefinition(texture);*/
+    noiseAddLevelsSimple(texture->bump_noise, 6, 1.0, 1.0);
+    texture->bump_height = 0.002;
+    texture->bump_scaling = 0.03;
+    texture->material.base.r = 1.0;
+    texture->material.base.g = 1.0;
+    texture->material.base.b = 1.0;
+    texture->material.reflection = 0.25;
+    texture->material.shininess = 0.6;
+    texture->thickness = 0.05;
+    texture->slope_range = 0.3;
     scenerySetTextures(&textures);
     texturesDeleteDefinition(&textures);
 
