@@ -2,8 +2,9 @@
 -------------------------------
 * Previews scaling is now logarithmic (slower when zoomed).
 * Previews drawing now takes advantage of multiple CPUs.
-* New displacement mode for textures (perpendicular to local ground surface).
+* New texture model (perpendicular displacement and thickness).
 * Added clouds hardness to light.
+* Version management in saved files.
 
 2012-04-20 Technology Preview 1
 -------------------------------
